--- a/res/layout/contact.xml
+++ b/res/layout/contact.xml
@@ -1,13 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout 
     android:orientation="vertical" 
-    android:background="#ff000000" 
+    android:background="#ffffffff" 
     android:layout_width="fill_parent" 
     android:layout_height="fill_parent"  
     xmlns:android="http://schemas.android.com/apk/res/android">
+    <ImageView 
+            android:id="@+id/obubanner" 
+            android:layout_width="fill_parent" 
+            android:layout_height="wrap_content" 
+            android:src="@drawable/bannera" 
+            android:scaleType="fitXY" 
+            android:adjustViewBounds="true" />
     <TextView 
         android:id="@+id/contact" 
         android:layout_width="wrap_content" 
         android:layout_height="wrap_content" 
-        android:text="@string/contact" />
+        android:text="@string/contact" 
+        android:layout_below="@id/obubanner"
+        android:textColor="@android:color/black"/>
 </LinearLayout>
