--- a/res/layout/cstudents.xml
+++ b/res/layout/cstudents.xml
@@ -2,16 +2,10 @@
 <ScrollView android:id="@+id/ScrollView01" 
     android:layout_width="fill_parent" android:layout_height="fill_parent"
   xmlns:android="http://schemas.android.com/apk/res/android">
-    <RelativeLayout 
+    <LinearLayout 
         android:background="#ffffffff" 
         android:layout_width="fill_parent" 
         android:layout_height="wrap_content">
-        
-        <ListView
-        android:id="@+id/mylist"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
-        
         <ImageView 
             android:id="@+id/obubanner" 
             android:layout_width="fill_parent" 
@@ -20,6 +14,5 @@
             android:scaleType="fitXY" 
             android:adjustViewBounds="true" >
             </ImageView>
-            </ListView>
-    </RelativeLayout>
+    </LinearLayout>
 </ScrollView>
